--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ rdiscount:
     - smart
 pygments: false # default python pygments have been replaced by pygments.rb
 
-paginate: 10          # Posts per page on the blog index
+paginate: 20          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
@@ -71,6 +71,9 @@ github_skip_forks: true
 # Twitter
 twitter_user: hungryzi
 twitter_tweet_button: true
+
+# LinkedIn
+linkedin_link: https://sg.linkedin.com/in/hungryzi
 
 # Google +1
 google_plus_one: false
